Bug 145431 - KPresenter forces Dissappear affect on me :(
Summary: KPresenter forces Dissappear affect on me :(
Status: RESOLVED FIXED
Alias: None
Product: calligrastage
Classification: Applications
Component: general (other bugs)
Version First Reported In: unspecified
Platform: FreeBSD Ports FreeBSD
: NOR normal
Target Milestone: ---
Assignee: T Zachmann
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2007-05-14 19:14 UTC by Hannes H
Modified: 2007-05-16 00:12 UTC (History)
0 users

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments
Script to remove ALL hide effects for objects (290 bytes, text/plain)
2007-05-15 07:57 UTC, T Zachmann
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Hannes H 2007-05-14 19:14:09 UTC
Version:           1.6.2 (using KDE KDE 3.5.6)
Installed from:    FreeBSD Ports
Compiler:          gcc (GCC) 3.4.6 [FreeBSD] 20060825
 
OS:                FreeBSD

i just created my first presentation and i really like kpresenter. the only problem is that it just wont let me deactivate the dissappear effect. i can turn off the effect, but when i close kpresenter and open the presentation again, nearly all objects are set to dissappear to the left...
this is really annoying... i have to present this thing on wednesday and every single object dissappearing is really stupid...

thanks for any help!
Comment 1 T Zachmann 2007-05-14 20:00:51 UTC
Hello,

can you please attach the presentation where you get the problem. Which version of kpresenter are you using. Can you also describe which steps you do so I can try to reproduce the problem.

Thanks for your help

Thorsten
Comment 2 Hannes H 2007-05-14 21:04:42 UTC
i am using kpresenter 1.6.2 on kde3.5.6 on freebsd-current

steps: open the presentation
go to third slide
pick an object, e.g. one of the frames in the bottom right corner
right-click, edit object effect
you will see that the disappear box is checked
uncheck it
save and exit
reopen, look at the object property again

thank you !!! 


p.s.: could upload the file here so its available @ http://userpage.spline.inf.fu-berlin.de/~hannes/eigene_sachen/presentation2.odp
Comment 3 T Zachmann 2007-05-15 07:57:09 UTC
Created attachment 20570 [details]
Script to remove ALL hide effects for objects

Looks like you found a bug. 

There is a workaround. Select a object set the disappear effect to "No Effect"
and then deselect the Disappear checkbox. After that the disappear effect will
no longer be saved.

You can also use the attached script to remove ALL disappear effects in your
presentation. I have tested it shortly but you should make a backup of your
presentation in case something goes wrong.

I will commit a patch to fix this problem shortly so the fix will be in koffice
1.6.3 .

Hope this helps,

Thorsten
Comment 4 T Zachmann 2007-05-15 07:59:50 UTC
SVN commit 664901 by zachmann:

o Fix: Bug 145431: KPresenter forces Dissappear affect on me :(

BUG: 145431        


 M  +1 -3      KPrPage.cpp  


--- branches/koffice/1.6/koffice/kpresenter/KPrPage.cpp #664900:664901
@@ -166,9 +166,7 @@
                     listObjectAnimation.insert( it.current()->getAppearStep(), tmp2 );
                 }
             }
-            if ( it.current()->getEffect3() != EF3_NONE ||
-                 it.current()->getDisappear() ||
-                 ! it.current()->getDisappearSoundEffectFileName().isEmpty())
+            if ( it.current()->getDisappear() )
             {
                 listAnimation *lstappear = new listAnimation;
                 lstappear->obj = it.current();
Comment 5 Hannes H 2007-05-16 00:12:13 UTC
thank you very much!