o Fix: Bug 145431: KPresenter forces Dissappear affect on me :(

BUG: 145431        

svn path=/branches/koffice/1.6/koffice/; revision=664901